# SwiftPol

./: .buildinfo  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  api.html  conf.py  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: SwiftPol_tests.yml  docs_compile.yml  draft-paper.yml  python-package.yml
Dev_tools/: docker.yml  polymer.yml  swiftpol.yml
Example_Notebooks/: Branched_PEGDA.ipynb  Chitin.ipynb  Crosslinked_PEGDA.ipynb  Crosslinking_demo.ipynb  PDMS_build.ipynb  PLGA_demo.ipynb  Polyply_integration.ipynb  Rubber_Vulcanization.ipynb  Tools_demo.ipynb  build_showcase.ipynb  oe_license.txt  rxn_smarts.ipynb
Example_Notebooks/.ipynb_checkpoints/: Chitin-checkpoint.ipynb  PLGA_demo-checkpoint.ipynb  Tools_demo-checkpoint.ipynb
_modules/: index.html  statistics.html
_modules/swiftpol/: build.html  crosslink.html  parameterize.html
_sources/: api.rst.txt  getting_started.rst.txt  index.rst.txt
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
docs/_build/: .buildinfo.bak  api.html  genindex.html  getting_started.html  index.html  (+4 more)
paper/: paper.bib  paper.md
swiftpol/: __init__.py  _version.py  build.py  crosslink.py  demo.py  meta.yaml  parameterise.py  parameterize.py  test_Parameterise.py  utils.py
swiftpol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: build_tests.py  crosslink_tests.py  demo_tests.py  parameterize_tests.py  utils_tests.py
(+38 files in other folders)
