[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftpol"
description = "Tools for polymer molecular dynamics simulations."
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Hannah Turney", email = "hannah.turney@kcl.ac.uk" }
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
  "pytest-runner"
]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[tool.setuptools.package-data]
swiftpol = [
    "py.typed"
]

[tool.setuptools_scm]
write_to = "swiftpol/_version.py"